[package]
name = "pingo"
version = "0.1.0"
authors = ["Michael <michael.prantl@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.25"
log = { version = "0.4", features = ["std", "max_level_trace", "release_max_level_info"] }
dns-lookup = "1.0"
clap = "2.33"
ctrlc = "3.1"
rand = "0.7"
crossbeam = "0.7"